Issue #1813: Fix codec lookup and setting/getting locales under Turkish locales.